# python-template

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: code-quality.yaml
scripts/: setup-ubuntu.sh
src/: cli.py
