[tool.poetry]
name = "template-cli"
version = "0.1.0"
description = "Basic template for python project"
authors = ["Bryan Culbertson <bryan.culbertson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
click = "8.1.7"
python-dotenv = "1.0.1"

[tool.poetry.group.dev.dependencies]
# Lint (versions duplicated in .pre-commit-config.yaml)
black = "24.10.0"
flake8 = "7.1.1"
isort = "5.13.2"
mypy = "1.13.0"
pre-commit = "4.0.1"

# Test
tox = "4.24.1"
pytest = "8.3.3"
pytest-cov = "6.0.0"
pytest-mock = "3.14.0"
pytest-xdist = {version = "3.6.1", extras = ["psutil"]}
pytest-randomly = "3.16.0"

[tool.poetry.scripts]
template-cli = "template_cli.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py312']

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
